--- a/brightness-previewer/default.css
+++ b/brightness-previewer/default.css
@@ -1,10 +1,17 @@
+
+.constrained-image {
+  max-width: 100%;
+  height: auto;
+}
+
+
 /*------------------------------------------------------------------------------
 TYPOGRAPHY
 ------------------------------------------------------------------------------*/
 
 html {
   font-family: Calibri, Arial, Helvetica, sans-serif;
-  font-size: 36px;
+  font-size: 24px;
   line-height: 1.3;
   color: #000;
   background-color: #fff;
@@ -53,38 +60,35 @@ ICONS
 BUTTONS
 ------------------------------------------------------------------------------*/
 .btn {
-  border: 2px solid rgba(0,0,0,0);
-  border-radius: 2px;
+  border: 2px solid rgb(130, 130, 130);
+  border-radius: 4px;
   display: inline-block;
-  height: 2.5rem;
+  height: 2rem;
   line-height: 1rem;
   font-size: 1rem;
   font-family: Calibri, sans-serif;
-  letter-spacing: 0.08rem;
   outline: 0;
-  padding: 0 2rem;
-  margin-right: 1rem;
+  padding: 0 1rem;
+  margin: 0.3rem;
   vertical-align: middle;
   text-decoration: none;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
-    0 2px 10px 0 rgba(0, 0, 0, 0.12);
   text-align: center;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-transition: .2s ease-out;
-  -moz-transition: .2s ease-out;
-  -o-transition: .2s ease-out;
-  -ms-transition: .2s ease-out;
-  transition: .2s ease-out;
+  -webkit-transition: .1s ease-out;
+  -moz-transition: .1s ease-out;
+  -o-transition: .1s ease-out;
+  -ms-transition: .1s ease-out;
+  transition: .1s ease-out;
   cursor: pointer;
-  background-color: #666;
-  color: #fff; }
+  background-color: #ffffff;
+  color: #0841bc; }
   .btn:hover {
-    background-color: #949494;
+    background-color: #ffffff;
     box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18),
-      0 4px 15px 0 rgba(0, 0, 0, 0.15);
+      0 2px 4px 0 rgba(0, 0, 0, 0.15);
     -webkit-tap-highlight-color: transparent; }
 
 .btn.btn-special {
@@ -103,6 +107,7 @@ BUTTONS
 
 .btn.btn-disabled {
   background-color: #ddd;
+  border: 0px solid rgb(90, 90, 90);
   box-shadow: none;
   color: #aaa;
   cursor: default; }
